--- a/client-side/src/Admin/Dashboard/sections/Navbar.css
+++ b/client-side/src/Admin/Dashboard/sections/Navbar.css
@@ -13,7 +13,7 @@
   }
   
   .nav-menu {
-    background-color: rgb(20, 19, 19);
+    background-color: #01949A;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -22,7 +22,6 @@
     top: 0;
     left: -100%;
     transition: 850ms;
-    border-radius: 50px 0px;
   }
   
   .nav-menu.active {
@@ -60,11 +59,10 @@
   }
   
   .navbar-toggle {
-    background-color: rgb(20, 19, 19);;
+    background-color: #01949A;
     width: 100%;
     height: 80px;
     display: flex;
-    border-radius: 5px;
     justify-content: start;
     align-items: center;
 
